# strapi-kit

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  LLM.md  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  dev-release.yml  document.yml  guard-main-origin.yml  publish-testpypi.yml  rebase-reminder.yml  release-pr.yml  release.yml  sync-main-to-dev.yml
docs/: changelog.md  configuration.md  export-import.md  index.md  installation.md  media.md  models.md  quickstart.md
docs/development/: architecture.md  contributing.md  release-process.md  testing.md
docs/stylesheets/: extra.css
examples/: MIGRATION_GUIDE.md  async_operations.py  basic_crud.py  config_di_demo.py  export_import_with_media.py  export_import_with_schemas.py  full_migration_v5.py  simple_migration.py  verify_installation.py
src/py_strapi/: __init__.py  __version__.py  config_provider.py  protocols.py
src/py_strapi/auth/: __init__.py  api_token.py
src/py_strapi/cache/: __init__.py  schema_cache.py
src/py_strapi/client/: __init__.py  async_client.py  base.py  sync_client.py
src/py_strapi/exceptions/: __init__.py  errors.py
src/py_strapi/export/: __init__.py  exporter.py  importer.py  media_handler.py  relation_resolver.py
src/py_strapi/models/: __init__.py  config.py  export_format.py  import_options.py  schema.py
src/py_strapi/operations/: __init__.py  media.py  streaming.py
src/py_strapi/parsers/: version_detecting.py
src/py_strapi/utils/: __init__.py  uid.py
src/strapi_kit/: __init__.py  config_provider.py
src/strapi_kit/cache/: schema_cache.py
src/strapi_kit/client/: async_client.py  base.py  sync_client.py
src/strapi_kit/exceptions/: __init__.py  errors.py
src/strapi_kit/export/: __init__.py  exporter.py  importer.py  jsonl_reader.py  jsonl_writer.py  relation_resolver.py
src/strapi_kit/models/: __init__.py  config.py  content_type.py  enums.py  export_format.py  import_options.py  schema.py
src/strapi_kit/operations/: media.py  streaming.py
src/strapi_kit/utils/: __init__.py  rate_limiter.py  schema.py  seo.py  uid.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  docker-compose.yml  seed_data.py  test_bulk_operations.py  test_crud_operations.py  test_error_handling.py  test_media_operations.py  test_query_builder.py
tests/e2e/strapi/: .env.example  .gitignore  Dockerfile  package.json
tests/unit/: __init__.py  test_audit_fixes.py  test_bulk_operations.py  test_client.py  test_client_typed.py  test_config_factory.py  test_config_provider.py  test_content_type_builder.py  test_dependency_injection.py  test_export_import.py  test_media_async.py  test_media_handler.py  test_media_sync.py  test_relation_resolver.py  test_retry.py  test_streaming.py
tests/unit/cache/: __init__.py  test_schema_cache.py
tests/unit/models/: __init__.py  test_filters.py  test_media.py  test_normalization.py  test_pagination.py  test_populate.py  test_query.py  test_response_v4.py  test_response_v5.py  test_sort.py
tests/unit/operations/: test_media.py
tests/unit/utils/: test_seo.py  (+1 more)
(+20 files in other folders)
